--- a/static/styles.css
+++ b/static/styles.css
@@ -24,6 +24,25 @@ body {
   background-image: linear-gradient(to bottom right, var(--almost-black), var(--black));
 }
 
+button {
+  width: 100%;
+}
+
+#backbtn {
+  margin-top: 5px;
+  font-size: 22px;
+  font-weight: bold;
+  color: var(--white);
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  box-shadow: none;
+  cursor: pointer;
+  background: var(--blue);
+  background-image: linear-gradient(to bottom, var(--blue-light), var(--blue));
+  transition: box-shadow .2s ease;
+}
+
 .app {
   height: 100vh;
   display: flex;
